<resources>
    <string name="app_name" translatable="false">Sudoku App</string>
    <string name="delete">Delete</string>
    <string name="single_player">Single Player</string>
    <string name="two_players">Two Players</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="nickname">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="server_str">Server</string>
    <string name="help">Help</string>
    <string name="register">Register</string>
    <string name="take_picture">Take Picture</string>
    <string name="continue_str">Continue</string>
    <string name="no_camera_found">No camera was found</string>
    <string name="str_photo_saved">Your Photo has been saved with sucess!</string>
    <string name="str_take_another_picture">Take a new picture</string>
    <string name="hello">Hello</string>
    <string name="veryHard">Very Hard</string>
    <string name="newbie">Newbie</string>
    <string name="str_choose_level">Please choose your difficulty level</string>
    <string name="points">Points</string>
    <string name="save_game">SIngle Player</string>
    <string name="online">Online</string>
    <string name="the_winner_is">The Winner is:</string>
    <string name="client_str">Client</string>
    <string name="player">Player</string>
    <string name="time_left_str">Time Left</string>
    <string name="seconds_min">sec</string>
    <string name="history">History</string>
    <string name="credits">Credits</string>
    <string name="no_games_were_found">No games were found</string>
    <string name="modo_de_jogo">Game Mode</string>
    <string name="dificuldade">Difficulty</string>
    <string name="players">Players</string>
    <string name="winner">Winner</string>
    <string name="credits_str">The algorithm to resolve the sudoku is given from:  \n https://www.geeksforgeeks.org/sudoku-backtracking-7   \n\n Developed by: André Jordão, Pedro Rodrigues and Luís Viegas  \n@January, 2020</string>
</resources>
